--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -28,8 +28,25 @@ const { title } = Astro.props;
       content={Astro.generator}
     />
     <title>{title}</title>
+    <link
+      rel="preconnect"
+      href="https://fonts.googleapis.com"
+    />
+    <link
+      rel="preconnect"
+      href="https://fonts.gstatic.com"
+      crossorigin
+    />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Inter:wght@100..900&display=swap"
+      rel="stylesheet"
+    />
   </head>
   <body>
-    <slot />
+    <main
+      class="h-full w-full pb-14 overflow-auto"
+    >
+      <slot />
+    </main>
   </body>
 </html>
