--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -22,7 +22,7 @@ const lists = test.map((item) =>
 const entries = await getCollection("lyrics");
 ---
 
-<Layout title="Welcome to Astro.">
+<Layout title="MY TREE OF LIFE">
   <div class="max-w-3xl mx-auto py-12 px-6">
     {
       lists.map((list) =>
